Use collection factory methods where possible